...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer2"
        app:layout_constraintVertical_bias="0.333" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/quizImage"
        app:layout_constraintEnd_toEndOf="parent"
...
